SegundoParcial/SegundoPunto/MAPFilterFunctionParser.py
# Generated from MAPFilterFunction.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MAPFilterFunctionParser ( Parser ):

    grammarFileName = "MAPFilterFunction.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'MAP'", "'('", "','", "')'", "'FILTER'", 
                     "'lambda'", "':'", "'['", "']'", "'{'", "'}'", "'range'", 
                     "'.'", "'**'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>'", 
                     "'<'", "'>='", "'<='", "'=='", "'!='", "'and'", "'or'", 
                     "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "NUMBER", "IDENTIFIER", "WS" ]

    RULE_program = 0
    RULE_mapExpr = 1
    RULE_filterExpr = 2
    RULE_functionOrIdentifier = 3
    RULE_function = 4
    RULE_paramList = 5
    RULE_iterable = 6
    RULE_list = 7
    RULE_tuple = 8
    RULE_dict = 9
    RULE_keyValuePair = 10
    RULE_rangeFunc = 11
    RULE_methodCall = 12
    RULE_value = 13
    RULE_expr = 14

    ruleNames =  [ "program", "mapExpr", "filterExpr", "functionOrIdentifier", 
                   "function", "paramList", "iterable", "list", "tuple", 
                   "dict", "keyValuePair", "rangeFunc", "methodCall", "value", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    STRING=29
    NUMBER=30
    IDENTIFIER=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MAPFilterFunctionParser.EOF, 0)

        def mapExpr(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.MapExprContext,0)


        def filterExpr(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.FilterExprContext,0)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MAPFilterFunctionParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.state = 30
                self.mapExpr()
                pass
            elif token in [5]:
                self.state = 31
                self.filterExpr()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 34
            self.match(MAPFilterFunctionParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionOrIdentifier(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.FunctionOrIdentifierContext,0)


        def iterable(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.IterableContext,0)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_mapExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapExpr" ):
                listener.enterMapExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapExpr" ):
                listener.exitMapExpr(self)




    def mapExpr(self):

        localctx = MAPFilterFunctionParser.MapExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mapExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(MAPFilterFunctionParser.T__0)
            self.state = 37
            self.match(MAPFilterFunctionParser.T__1)
            self.state = 38
            self.functionOrIdentifier()
            self.state = 39
            self.match(MAPFilterFunctionParser.T__2)
            self.state = 40
            self.iterable()
            self.state = 41
            self.match(MAPFilterFunctionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionOrIdentifier(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.FunctionOrIdentifierContext,0)


        def iterable(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.IterableContext,0)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_filterExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterExpr" ):
                listener.enterFilterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterExpr" ):
                listener.exitFilterExpr(self)




    def filterExpr(self):

        localctx = MAPFilterFunctionParser.FilterExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_filterExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(MAPFilterFunctionParser.T__4)
            self.state = 44
            self.match(MAPFilterFunctionParser.T__1)
            self.state = 45
            self.functionOrIdentifier()
            self.state = 46
            self.match(MAPFilterFunctionParser.T__2)
            self.state = 47
            self.iterable()
            self.state = 48
            self.match(MAPFilterFunctionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionOrIdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.FunctionContext,0)


        def IDENTIFIER(self):
            return self.getToken(MAPFilterFunctionParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_functionOrIdentifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionOrIdentifier" ):
                listener.enterFunctionOrIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionOrIdentifier" ):
                listener.exitFunctionOrIdentifier(self)




    def functionOrIdentifier(self):

        localctx = MAPFilterFunctionParser.FunctionOrIdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionOrIdentifier)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.function()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.match(MAPFilterFunctionParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramList(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.ParamListContext,0)


        def expr(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.ExprContext,0)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = MAPFilterFunctionParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(MAPFilterFunctionParser.T__5)
            self.state = 55
            self.paramList()
            self.state = 56
            self.match(MAPFilterFunctionParser.T__6)
            self.state = 57
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MAPFilterFunctionParser.IDENTIFIER)
            else:
                return self.getToken(MAPFilterFunctionParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)




    def paramList(self):

        localctx = MAPFilterFunctionParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(MAPFilterFunctionParser.IDENTIFIER)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 60
                self.match(MAPFilterFunctionParser.T__2)
                self.state = 61
                self.match(MAPFilterFunctionParser.IDENTIFIER)
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IterableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.ListContext,0)


        def tuple_(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.TupleContext,0)


        def dict_(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.DictContext,0)


        def rangeFunc(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.RangeFuncContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.MethodCallContext,0)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_iterable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterable" ):
                listener.enterIterable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterable" ):
                listener.exitIterable(self)




    def iterable(self):

        localctx = MAPFilterFunctionParser.IterableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_iterable)
        try:
            self.state = 72
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.list_()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.tuple_()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.dict_()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.rangeFunc()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.methodCall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAPFilterFunctionParser.ValueContext)
            else:
                return self.getTypedRuleContext(MAPFilterFunctionParser.ValueContext,i)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)




    def list_(self):

        localctx = MAPFilterFunctionParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(MAPFilterFunctionParser.T__7)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0):
                self.state = 75
                self.value()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 76
                    self.match(MAPFilterFunctionParser.T__2)
                    self.state = 77
                    self.value()
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 85
            self.match(MAPFilterFunctionParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TupleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAPFilterFunctionParser.ValueContext)
            else:
                return self.getTypedRuleContext(MAPFilterFunctionParser.ValueContext,i)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_tuple

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuple" ):
                listener.enterTuple(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuple" ):
                listener.exitTuple(self)




    def tuple_(self):

        localctx = MAPFilterFunctionParser.TupleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_tuple)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(MAPFilterFunctionParser.T__1)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0):
                self.state = 88
                self.value()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 89
                    self.match(MAPFilterFunctionParser.T__2)
                    self.state = 90
                    self.value()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 98
            self.match(MAPFilterFunctionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DictContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def keyValuePair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAPFilterFunctionParser.KeyValuePairContext)
            else:
                return self.getTypedRuleContext(MAPFilterFunctionParser.KeyValuePairContext,i)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_dict

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDict" ):
                listener.enterDict(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDict" ):
                listener.exitDict(self)




    def dict_(self):

        localctx = MAPFilterFunctionParser.DictContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dict)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(MAPFilterFunctionParser.T__9)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0):
                self.state = 101
                self.keyValuePair()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 102
                    self.match(MAPFilterFunctionParser.T__2)
                    self.state = 103
                    self.keyValuePair()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 111
            self.match(MAPFilterFunctionParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyValuePairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAPFilterFunctionParser.ValueContext)
            else:
                return self.getTypedRuleContext(MAPFilterFunctionParser.ValueContext,i)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_keyValuePair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKeyValuePair" ):
                listener.enterKeyValuePair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKeyValuePair" ):
                listener.exitKeyValuePair(self)




    def keyValuePair(self):

        localctx = MAPFilterFunctionParser.KeyValuePairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_keyValuePair)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.value()
            self.state = 114
            self.match(MAPFilterFunctionParser.T__6)
            self.state = 115
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RangeFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAPFilterFunctionParser.ValueContext)
            else:
                return self.getTypedRuleContext(MAPFilterFunctionParser.ValueContext,i)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_rangeFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRangeFunc" ):
                listener.enterRangeFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRangeFunc" ):
                listener.exitRangeFunc(self)




    def rangeFunc(self):

        localctx = MAPFilterFunctionParser.RangeFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rangeFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(MAPFilterFunctionParser.T__11)
            self.state = 118
            self.match(MAPFilterFunctionParser.T__1)
            self.state = 119
            self.value()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 120
                self.match(MAPFilterFunctionParser.T__2)
                self.state = 121
                self.value()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 122
                    self.match(MAPFilterFunctionParser.T__2)
                    self.state = 123
                    self.value()




            self.state = 128
            self.match(MAPFilterFunctionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MAPFilterFunctionParser.IDENTIFIER)
            else:
                return self.getToken(MAPFilterFunctionParser.IDENTIFIER, i)

        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_methodCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodCall" ):
                listener.enterMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodCall" ):
                listener.exitMethodCall(self)




    def methodCall(self):

        localctx = MAPFilterFunctionParser.MethodCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_methodCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(MAPFilterFunctionParser.IDENTIFIER)
            self.state = 131
            self.match(MAPFilterFunctionParser.T__12)
            self.state = 132
            self.match(MAPFilterFunctionParser.IDENTIFIER)
            self.state = 133
            self.match(MAPFilterFunctionParser.T__1)
            self.state = 134
            self.match(MAPFilterFunctionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(MAPFilterFunctionParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(MAPFilterFunctionParser.IDENTIFIER, 0)

        def STRING(self):
            return self.getToken(MAPFilterFunctionParser.STRING, 0)

        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = MAPFilterFunctionParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3758096384) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MAPFilterFunctionParser.ExprContext)
            else:
                return self.getTypedRuleContext(MAPFilterFunctionParser.ExprContext,i)


        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MAPFilterFunctionParser.IDENTIFIER)
            else:
                return self.getToken(MAPFilterFunctionParser.IDENTIFIER, i)

        def value(self):
            return self.getTypedRuleContext(MAPFilterFunctionParser.ValueContext,0)


        def getRuleIndex(self):
            return MAPFilterFunctionParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MAPFilterFunctionParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 139
                self.match(MAPFilterFunctionParser.T__27)
                self.state = 140
                self.expr(4)
                pass

            elif la_ == 2:
                self.state = 141
                self.match(MAPFilterFunctionParser.IDENTIFIER)
                self.state = 142
                self.match(MAPFilterFunctionParser.T__12)
                self.state = 143
                self.match(MAPFilterFunctionParser.IDENTIFIER)
                self.state = 144
                self.match(MAPFilterFunctionParser.T__1)
                self.state = 145
                self.match(MAPFilterFunctionParser.T__3)
                pass

            elif la_ == 3:
                self.state = 146
                self.match(MAPFilterFunctionParser.T__1)
                self.state = 147
                self.expr(0)
                self.state = 148
                self.match(MAPFilterFunctionParser.T__3)
                pass

            elif la_ == 4:
                self.state = 150
                self.value()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 164
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 162
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = MAPFilterFunctionParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 153
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 154
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1032192) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 155
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = MAPFilterFunctionParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 156
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 157
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 158
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = MAPFilterFunctionParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 159
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 160
                        _la = self._input.LA(1)
                        if not(_la==26 or _la==27):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 161
                        self.expr(6)
                        pass

             
                self.state = 166
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
